Add exercises and content

--- a/JavaScript2023/index.html
+++ b/JavaScript2023/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 - Introducción</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>JavaScript</title>
 </head>
 <body>
     <h1>Hello, JavaScript... Again.</h1>
+    <nav>
+        <ul>
+            <li><a href="./01-Introducción/introduccion.html">01 - Introducción</a></li>
+            <li><a href="./01-Introducción/introduccion.html">02 - Módulos ES6</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
