Add different topics

--- a/JavaScript2023/01-Introducción/introduccion.html
+++ b/JavaScript2023/01-Introducción/introduccion.html
@@ -13,8 +13,15 @@
             <li><a href="Variables/variables.html">01 - Variables</a></li>
             <li><a href="TiposDeDatos/tdatos.html">02 - Tipos de datos</a></li>
             <li><a href="Operadores/operadores.html">03 - Operadores</a></li>
-            <li><a href="Variables/variables.html">01 - Variables</a></li>
-            <li><a href="Variables/variables.html">01 - Variables</a></li>
+            <li><a href="Arreglos/arreglos.html">04 - Arreglos</a></li>
+            <li><a href="Objetos/objetos.html">05 - Objetos</a></li>
+            <li><a href="TemLitStrings/templates.html">06 - Template literals & strings</a></li>
+            <li><a href="Condicionales/condicionales.html">07 - Condicionales</a></li>
+            <li><a href="CondicionalSwitch/switch.html">08 - Condicional Switch</a></li>
+            <li><a href="OperadorTernario/ternario.html">09 - Operador Ternario</a></li>
+            <li><a href="Funciones/funciones.html">10 - Funciones</a></li>
+            <li><a href="Param&Argum/paramyargum.html">11 - Parámetros y Argumentos</a></li>
+            <li><a href="Return/return.html">12 - Return</a></li>
         </ul>
     </nav>
 </body>
