Add spread and rest operators

--- a/JavaScript2023/01-Introducción/introduccion.html
+++ b/JavaScript2023/01-Introducción/introduccion.html
@@ -22,6 +22,8 @@
             <li><a href="Funciones/funciones.html">10 - Funciones</a></li>
             <li><a href="Param&Argum/paramyargum.html">11 - Parámetros y Argumentos</a></li>
             <li><a href="Return/return.html">12 - Return</a></li>
+            <li><a href="MetTxtNum/metodos.html">13 - Métodos String & Numbers</a></li>
+            <li><a href="SpreadRestDest/spread-rest-dest.html">14 - Spread Rest & Destructuring</a></li>
         </ul>
     </nav>
 </body>
