--- a/JavaScript2023/01-Introducción/introduccion.html
+++ b/JavaScript2023/01-Introducción/introduccion.html
@@ -25,6 +25,9 @@
             <li><a href="MetTxtNum/metodos.html">13 - Métodos String & Numbers</a></li>
             <li><a href="SpreadRestDest/spread-rest-dest.html">14 - Spread Rest & Destructuring</a></li>
             <li><a href="For/for.html">15 - Ciclo For</a></li>
+            <li><a href="Break&Continue/break.html">16 - Break & Continue</a></li>
+            <li><a href="While/while.html">17 - While</a></li>
+            <li><a href="ForEach-In-Of/for.html">18 - For Each & In & Of</a></li>
         </ul>
     </nav>
 </body>
