Finish commit for the first module

--- a/JavaScript2023/01-Introducción/introduccion.html
+++ b/JavaScript2023/01-Introducción/introduccion.html
@@ -28,6 +28,12 @@
             <li><a href="Break&Continue/break.html">16 - Break & Continue</a></li>
             <li><a href="While/while.html">17 - While</a></li>
             <li><a href="ForEach-In-Of/for.html">18 - For Each & In & Of</a></li>
+            <li><a href="Clases/clases.html"> 19 - Clases</a></li>
+            <li><a href="Herencia/herencia.html"> 20 - Herencia</a></li>
+            <li><a href="M&PEstaticos/estaticos.html">21 - Estáticos</a></li>
+            <li><a href="Callbacks/callbacks.html">22 - Callbacks</a></li>
+            <li><a href="Promesas/promesas.html">23 - Promesas</a></li>
+            <li><a href="AsyncAwait/asyncawait.html">24 - Async/Await & Try/Catch</a></li>
         </ul>
     </nav>
 </body>
