--- a/JavaScript2023/index.html
+++ b/JavaScript2023/index.html
@@ -11,7 +11,8 @@
     <nav>
         <ul>
             <li><a href="./01-Introducción/introduccion.html">01 - Introducción</a></li>
-            <li><a href="./01-Introducción/introduccion.html">02 - Módulos ES6</a></li>
+            <li><a href="./02-Módulos/Exports&Imports/exports.html">02 - Módulos ES6</a></li>
+            <li><a href="./03-BOM/bom.html">03 - BOM</a></li>
         </ul>
     </nav>
 </body>
