Add DOM module with some methods

--- a/JavaScript2023/index.html
+++ b/JavaScript2023/index.html
@@ -13,6 +13,7 @@
             <li><a href="./01-Introducción/introduccion.html">01 - Introducción</a></li>
             <li><a href="./02-Módulos/Exports&Imports/exports.html">02 - Módulos ES6</a></li>
             <li><a href="./03-BOM/bom.html">03 - BOM</a></li>
+            <li><a href="./04-DOM/dom.html">04 - DOM</a></li>
         </ul>
     </nav>
 </body>
