Final commit of the DOM module

--- a/JavaScript2023/04-DOM/dom.html
+++ b/JavaScript2023/04-DOM/dom.html
@@ -11,6 +11,11 @@
     <nav>
         <ul>
             <li><a href="Elementos/elementos.html">01 - Elementos del DOM</a></li>
+            <li><a href="AgregandoNodos/nodos.html">02 - Nodos en el DOM</a></li>
+            <li><a href="EliminandoNodos/eliminar.html">03 - Eliminando nodos en el DOM</a></li>
+            <li><a href="EstilosDOM/estilos.html">04 - Estilos DOM</a></li>
+            <li><a href="Eventos/eventos.html">05 - Eventos</a></li>
+            <li><a href="EliminarEventos/eliminar.html">06 - Eliminar eventos</a></li>
         </ul>
     </nav>
 </body>
